packages/fortifier-macros-tests/tests/validations/url/unknown_fail.stderr
error: expected `,`
 --> tests/validations/url/unknown_fail.rs:5:19
  |
5 |     #[validate(url(unknown))]
  |                   ^
